--- a/test/test1.html
+++ b/test/test1.html
@@ -5,330 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="js/jquery.min.js"></script>
-    <style>
-        * {
-            padding: 0;
-            margin: 0;
-        }
-
-        a {
-            text-decoration: none;
-        }
-
-        .cart-thead {
-            width: 100%;
-            height: 45px;
-            background-color: #ddd;
-        }
-
-        .cart-thead div {
-            display: inline-block;
-            height: 45px;
-            line-height: 45px;
-            text-align: center;
-        }
-
-        .cart-thead .t-checkbox,
-        .t-price,
-        .t-sum {
-            width: 10%;
-        }
-
-        .cart-thead .t-goods {
-            width: 40%;
-        }
-
-        .cart-thead .t-num,
-        .t-action {
-            width: 13%;
-        }
-
-        /*  */
-        .cart-item-list .cart-item {
-            width: 100%;
-            height: 100px;
-            /* background-color: greenyellow; */
-            padding-top: 10px;
-            border-bottom: 1px solid #ccc;
-        }
-
-        .cart-item-list .cart-item div {
-            display: inline-block;
-            text-align: center;
-        }
-
-        .cart-item-list .cart-item .p-checkbox,
-        .p-price,
-        .p-sum {
-            width: 10%;
-        }
-
-        .cart-item-list .cart-item .p-goods {
-            width: 40%;
-        }
-
-        .cart-item-list .cart-item .p-num,
-        .p-action {
-            width: 13%;
-        }
-
-        .itxt {
-            width: 9%;
-        }
-
-        /*  */
-        .cart-floatbar {
-            height: 45px;
-            background-color: #ddd;
-        }
-
-        .cart-floatbar div {
-            display: inline-block;
-            text-align: center;
-        }
-
-        .cart-floatbar .select-all {
-            width: 10%;
-        }
-
-        .cart-floatbar .operation {
-            width: 25%;
-            margin-right: 20%;
-        }
-
-        .cart-floatbar .toolbar-right {
-            width: 42%;
-
-        }
-
-        .cart-floatbar .operation a {
-            margin-right: 3%;
-        }
-
-        .toolbar-right div {
-            margin-right: 2%;
-        }
-
-        .toolbar-right .btn-area {
-            width: 30%;
-            background-color: red;
-        }
-
-        /* 背景颜色 */
-        .check-cart-item {
-            background-color: pink;
-        }
-    </style>
-
+    <script src="./js/jquery.min.js"></script>
 </head>
 
 <body>
-    <div class="cart-wrap">
-        <!-- 头部全选框 -->
-        <div class="cart-thead">
-            <div class="t-checkbox">
-                <input type="checkbox" class="checkall">全选
-            </div>
-            <div class="t-goods">商品</div>
-            <div class="t-price">单价</div>
-            <div class="t-num">数量</div>
-            <div class="t-sum">小计</div>
-            <div class="t-action">操作</div>
-        </div>
-        <!-- 商品详细模块 -->
-        <div class="cart-item-list">
-            <div class="cart-item">
-                <div class="p-checkbox">
-                    <input type="checkbox" name="" id="" class="j-checkbox">
-                </div>
-                <div class="p-goods">
-                    <div class="p-img">
-                        <img src="" alt="">
-                    </div>
-                    <div class="p-msg">xxxxxxxxxxxxxxxxx</div>
-                </div>
-                <div class="p-price">￥12.20</div>
-                <div class="p-num">
-                    <div class="quantity-form">
-                        <a href="javascript:;" class="decrement">-</a>
-                        <input type="text" class="itxt" value="1">
-                        <a href="javascript:;" class="increment">+</a>
-                    </div>
-                </div>
-                <div class="p-sum">￥12.20</div>
-                <div class="p-action"><a href="javascript:;">删除</a></div>
-            </div>
-            <div class="cart-item">
-                <div class="p-checkbox">
-                    <input type="checkbox" name="" id="" class="j-checkbox">
-                </div>
-                <div class="p-goods">
-                    <div class="p-img">
-                        <img src="" alt="">
-                    </div>
-                    <div class="p-msg">xxxxxxxxxxxxxxxxx</div>
-                </div>
-                <div class="p-price">￥12.22</div>
-                <div class="p-num">
-                    <div class="quantity-form">
-                        <a href="javascript:;" class="decrement">-</a>
-                        <input type="text" class="itxt" value="1">
-                        <a href="javascript:;" class="increment">+</a>
-                    </div>
-                </div>
-                <div class="p-sum">￥12.22</div>
-                <div class="p-action"><a href="javascript:;">删除</a></div>
-            </div>
-            <div class="cart-item">
-                <div class="p-checkbox">
-                    <input type="checkbox" name="" id="" class="j-checkbox">
-                </div>
-                <div class="p-goods">
-                    <div class="p-img">
-                        <img src="" alt="">
-                    </div>
-                    <div class="p-msg">xxxxxxxxxxxxxxxxx</div>
-                </div>
-                <div class="p-price">￥12.22</div>
-                <div class="p-num">
-                    <div class="quantity-form">
-                        <a href="javascript:;" class="decrement">-</a>
-                        <input type="text" class="itxt" value="1">
-                        <a href="javascript:;" class="increment">+</a>
-                    </div>
-                </div>
-                <div class="p-sum">￥12.22</div>
-                <div class="p-action"><a href="javascript:;">删除</a></div>
-            </div>
-        </div>
-
-        <!-- 结算模块 -->
-        <div class="cart-floatbar">
-            <div class="select-all">
-                <input type="checkbox" class="checkall">全选
-            </div>
-            <div class="operation">
-                <a href="javascript:;" class="remove-batch">删除选中的商品</a>
-                <a href="javascript:;" class="clear-all">清空购物车</a>
-            </div>
-            <div class="toolbar-right">
-                <div class="amount-sum">已经选<em>0</em>件商品</div>
-                <div class="price-sum">总价:<em>￥0</em></div>
-                <div class="btn-area">去结算</div>
-            </div>
-        </div>
-    </div>
+    <button>快速</button>
+    <button>快速</button>
+    <button>快速</button>
+    <button>快速</button>
+    <button>快速</button>
+    <button>快速</button>
     <script>
         $(function () {
-            getSum();
-            //1.全选 全不选功能模块
-            //就是把全选按钮(checkall)的状态赋值给 三个小的input(j-checkbox)
-            $(".checkall").change(function () {
-                $(".j-checkbox,.checkall").prop("checked", $(this).prop("checked"));
-                //8.添加背景色
-                console.log('$(this).prop("checked")', $(this).prop("checked"))
-                if ($(this).prop("checked")) {
-                    $(".cart-item").addClass("check-cart-item");
-                } else {
-                    $(".cart-item").removeClass("check-cart-item");
-                }
-            })
-
-            //2.反全选
-            $(".j-checkbox").change(function () {
-                console.log('aaa', $(".j-checkbox:checked").length);
-                console.log('aaa', $(".j-checkbox").length);
-                if ($(".j-checkbox:checked").length == $(".j-checkbox").length) {
-                    $(".checkall").prop("checked", true);
-                } else {
-                    $(".checkall").prop("checked", false);
-                }
-
-                //8.添加背景色
-                if ($(this).prop("checked")) {
-                    $(this).parents(".cart-item").addClass("check-cart-item");
-                } else {
-                    $(this).parents(".cart-item").removeClass("check-cart-item");
-                }
-            })
-
-            //3.增减商品数量模块
-            //首先声明一个变量，当我们点击+号，就让这个值++,然后赋值给文本框
-            $(".increment").click(function () {
-                var n = $(this).siblings('.itxt').val();
-                n++;
-                $(this).siblings('.itxt').val(n);
-                //4.计算小计模块
-                //当前商品的单价
-                var p = $(this).parent().parent().siblings(".p-price").text();
-                p = p.substr(1);
-                var price = (p * n).toFixed(2);//保留2位小数
-                //小计模块赋值
-                $(this).parent().parent().siblings(".p-sum").text("￥" + price)
-                getSum();
-            })
-
-            $(".decrement").click(function () {
-                var n = $(this).siblings('.itxt').val();
-                if (n == 1) {
-                    return false;
-                }
-                n--;
-                $(this).siblings('.itxt').val(n);
-                //4.计算小计模块
-                //当前商品的单价
-                // var p = $(this).parent().parent().siblings(".p-price").text();
-                var p = $(this).parents(".p-num").siblings(".p-price").text();
-                p = p.substr(1);
-                var price = (p * n).toFixed(2);//保留2位小数
-                //小计模块赋值
-                $(this).parents(".p-num").siblings(".p-sum").text("￥" + price)
-                getSum();
-            })
-
-            //5.用户修改文本框的值   计算  小计模块
-            $(".itxt").change(function () {
-                var n = $(this).val();
-                var p = $(this).parents(".p-num").siblings(".p-price").text().substr(1);
-                var price = (p * n).toFixed(2);//保留2位小数
-                //小计模块赋值
-                $(this).parents(".p-num").siblings(".p-sum").text("￥" + price)
-                getSum();
-            })
-
-            //6.计算总计和总额模块
-            function getSum() {
-                var count = 0;
-                var money = 0;
-                $(".itxt").each(function (i, ele) {
-                    count += parseInt($(ele).val());
-                })
-                $(".amount-sum em").text(count);
-                $(".p-sum").each(function (i, ele) {
-                    money += parseFloat($(ele).text().substr(1));
-                })
-                $(".price-sum em").text("￥" + money.toFixed(2));
-            }
-
-            //7.删除商品模块
-            //(1) 商品后面的删除按钮
-            $(".p-action a").click(function () {
-                $(this).parents(".cart-item").remove();
-                getSum();
-            })
-            //(2) 删除选中的商品
-            $(".remove-batch").click(function () {
-                // $(".j-checkbox").each(function (i, domEle) {
-                //     console.log('domEle', $(domEle).prop("checked"))
-                // })
-                $(".j-checkbox:checked").parents(".cart-item").remove();
-                getSum();
-            })
-            //(3) 清空购物车 删除全部商品
-            $(".clear-all").click(function () {
-                $(".cart-item").remove();
-                getSum();
+            //1.隐式迭代
+            $("button").click(function () {
+                //2.让当前元素变成红色
+                $(this).css("color", "red")
+                //3.让其余兄弟元素不变色
+                $(this).siblings().css("color", "")
             })
         })
     </script>
