--- a/test/index.html
+++ b/test/index.html
@@ -5,35 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/tab.css">
 </head>
 
 <body>
-    <main>
-        <h4>xxxx动态标签页</h4>
-        <div class="tabsbox" id="tab">
-            <!-- tab标签 -->
-            <nav class="firstnav">
-                <ul>
-                    <li class="liactive"><span>测试1</span><span class="del">x</span></li>
-                    <li><span>测试2</span><span class="del">x</span></li>
-                    <li><span>测试3</span><span class="del">x</span></li>
-                </ul>
-                <div class="tabadd">
-                    <span>+</span>
-                </div>
-            </nav>
+    <script>
+        var obj = {
+            id: 1,
+            name: 'andy',
+            msg: {
+                age: 18
+            }
+        }
+        console.log('obj: ', obj);
 
-            <!-- tab内容 -->
-            <div class="tabscon">
-                <section class="conactive">测试1111</section>
-                <section>测试22222</section>
-                <section>测试3333</section>
-            </div>
-        </div>
-    </main>
 
-    <script src="./js/tab.js"></script>
+        var o = {};
+        //浅拷贝:方式1
+        // for (var k in obj) {
+        //     //k 是属性名 obj[k] 属性值
+        //     o[k] = obj[k];
+        // }
+        // //浅拷贝把深层次的数据地址拷贝给新对象了，所以新对象改变，原对象也变了
+        // console.log('o', o);
+        // o.msg.age = 20;
+
+
+        //浅拷贝:方式2
+        Object.assign(o, obj);
+        console.log('o', o);
+        o.msg.age = 20;
+    </script>
 </body>
 
 </html>
