--- a/test/index.html
+++ b/test/index.html
@@ -6,37 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        span {
-            color: #aaa;
-            font-size: 14px;
-        }
-
-        .right {
-            color: green;
-        }
-
-        .wrong {
-            color: red;
-        }
     </style>
 </head>
 
 <body>
-    <input type="text" class="uname"> <span>请输入用户名</span>
     <script>
-        var reg = /^[a-zA-Z0-9-_]{6,16}$/;
-        var uname = document.querySelector('.uname');
-        var span = document.querySelector('span');
-        uname.onblur = function () {
-            if (reg.test(this.value)) {
-                console.log();
-                span.className = 'right';
-                span.innerHTML = '用户名格式输入正确'
-            } else {
-                span.className = 'wrong';
-                span.innerHTML = '用户名格式输入错误'
-            }
-        }
+
+        const pI;//Missing initializer in const declaration
     </script>
 </body>
 
