--- a/test/index.html
+++ b/test/index.html
@@ -10,9 +10,16 @@
 </head>
 
 <body>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
     <script>
-
-        const pI;//Missing initializer in const declaration
+        const s5 = new Set(['a', 'b', 'c']);
+        s5.forEach(value => {
+            console.log(value);//a  b   c
+        })
     </script>
 </body>
 
